--- a/style.css
+++ b/style.css
@@ -1,69 +1,85 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: #234050;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: #234050;
 }
 
 .platzi {
-    width: 100px;
-    height: 100px;
-    position: relative;
-    margin: 40px auto;
-    /* background: red; */
-    transform: rotate(45deg);
+  width: 100px;
+  height: 100px;
+  position: relative;
+  margin: 40px auto;
+  /* background: red; */
+  transform: rotate(45deg);
 
-    animation-name: platzi-base;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-
+  animation-name: platzi-base;
+  animation-duration: 3.5s;
+  animation-iteration-count: infinite;
 }
 
 .platzi-left {
-    width: 80%;
-    height: 65%;
-    border: 20px solid #97c93e;
-    border-bottom: none;
-    border-radius: 20px 20px 0 0 ;
-    box-sizing: border-box;
-    position: relative;
-    top: 1px;
+  width: 100%;
+  height: 65%;
+  border: 20px solid #97c93e;
+  border-bottom: none;
+  border-radius: 20px 20px 0 0;
+  box-sizing: border-box;
+  position: relative;
+  top: 1px;
 
-    animation-name: platzi-left;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
+  animation-name: platzi-left;
+  animation-duration: 3.5s;
+  animation-iteration-count: infinite;
+  animation-delay: 1s;
 }
 
 .platzi-right {
-    width: 100%;
-    height: 35%;
-    border: 20px solid #97c93e;
-    border-top: none;
-    box-sizing: border-box;
-    border-radius: 0 0 20px 20px;
+  width: 100%;
+  height: 35%;
+  border: 20px solid #97c93e;
+  border-top: none;
+  box-sizing: border-box;
+  border-radius: 0 0 20px 20px;
 }
 
 /* Esto hace pasar de trasnparente  a ponerse en la patalla para luego rodar */
 @keyframes platzi-base {
-    0% {
-        opacity: 0;
-        transform: rotate(0deg);
-    }
-    30% {
-        opacity: 1;
-        transform: rotate(405deg);
-    }
-    80% {
-        opacity: 1;
-        transform: rotate(405deg);
-    }
-    100% {
-        opacity: 0;
-        transform: rotate(0deg);
-    }
+  0% {
+    opacity: 0;
+    transform: scale(0.3) rotate(0deg);
+  }
+  30% {
+    opacity: 1;
+    transform: scale(0.8) rotate(405deg);
+  }
+  80% {
+    opacity: 1;
+    transform: scale(0.8) rotate(405deg);
+  }
+  /* Hay que recordar que en el estado final la animacion se esta llendo, por esto el scale es .3 y no 1 */
+  100% {
+    opacity: 0;
+    transform: scale(0.3) rotate(0deg);
+  }
 }
 
 @keyframes platzi-left {
-
+  0% {
+    width: 100;
+  }
+  /* Hay que recordar que en el estado final la animacion se esta llendo */
+  20% {
+      width: 80%;
+  }
+  50% {
+    width: 80%;
+}
+70% {
+    width: 100%;
+}
+  100% {
+    width: 100%;
+  }
 }
